--- a/style.css
+++ b/style.css
@@ -3,37 +3,23 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.container{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    height: 500px;
-    flex-direction: column;
-}
-
-
-.game-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-}
-
-.counter-box{
-    display: flex;
-}
-
-.number{
-    margin-top: 50px;
-    padding: 2rem;
+h1{
     font-size: 80px;
+    text-align: center;
 }
 
-.hidden{
-    display: none;
+h3{
+    font-size: 80px;
+    text-align: center;
 }
 
+
+.numbers{
+    display: flex;
+	justify-content: space-around;
+    font-size: 50px;
+    margin: 200px;
+}
 
 
 
